apps/app-proxy/overlays/csdp-may/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: csdp-may-cap-app-proxy
  namespace: csdp-may
spec:
  ingressClassName: nginx
  rules:
  - host: charizard-csdp.support.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
